--- a/.github/workflows/third-workflow-filtered-branches.yml
+++ b/.github/workflows/third-workflow-filtered-branches.yml
@@ -8,9 +8,6 @@ on:
   push:
     branches:
       - feature/*
-  pull_request:
-    branches:
-      - main
 jobs:
   first-job:
     runs-on: ubuntu-latest
@@ -28,3 +25,6 @@ jobs:
         run: echo "Hi class, hope you all had a good mid semester break"
       - name: Print the contents of ta firstfile
         run: cat firstfile.txt
+      - name: Run if job fails
+        if: failure()
+        run: echo "You may send these details of the failure to the dev or other team members"
