updated third and fourht workflow

--- a/.github/workflows/fourth-workflow-with-job-status.yml
+++ b/.github/workflows/fourth-workflow-with-job-status.yml
@@ -1,6 +1,7 @@
 name: Fourth Workflow Using GitHub Actions
 
-run-name: >+ Fourth workflow 
+run-name: >+ 
+          Fourth workflow 
           ${{ github.actor  }} has triggered this workflow \
           using ${{ github.event_name }} event \
           on branch ${{ github.ref  }} of ${{github.repository}} repo.
