--- a/.github/workflows/third-workflow-filtered-branches.yml
+++ b/.github/workflows/third-workflow-filtered-branches.yml
@@ -1,6 +1,7 @@
 name: Third Workflow Using GitHub Actions
 
-run-name: >+ Third workflow
+run-name: >+ 
+          Third workflow
           ${{ github.actor  }} has triggered this workflow \
           using ${{ github.event_name }} event \
           on branch ${{ github.ref  }} of ${{github.repository}} repo.
