--- a/.github/workflows/fourth-workflow-with-job-status.yml
+++ b/.github/workflows/fourth-workflow-with-job-status.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Always run this step on second job notifaction
         if: always()
-        run: echo "Second Job result status is: ${{needs.second-fail-job.result}}"
+        run: echo "Second Job result status is ${{needs.second-fail-job.result}}"
