--- a/.github/workflows/fourth-workflow-with-job-status.yml
+++ b/.github/workflows/fourth-workflow-with-job-status.yml
@@ -29,6 +29,7 @@ jobs:
   third-notification-job:
     runs-on: ubuntu-latest
     needs: second-fail-job
+    if: always()
     steps:
       - name: Send notification about the second job on failure
         if: ${{ needs.second-fail-job.result == 'failure' }}
