--- a/.github/workflows/fifth-workflow-with-notification.yml
+++ b/.github/workflows/fifth-workflow-with-notification.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           server_address: ${{secrets.SMTP_HOST}}
           server_port: 587
-          secure: true
+          secure: false
           username: ${{secrets.SMTP_USERNAME}}
           password: ${{secrets.SMTP_PASSWORD}}
           subject: Github Actions job result
